--- a/app/application/blueprints/site/views/admin.html
+++ b/app/application/blueprints/site/views/admin.html
@@ -43,7 +43,7 @@
                   <div class="actions-list">
                     <div class="clickable icon-action">
                       <i class="fas fa-edit"></i>
-                      <span>Editează</span>
+                      <span class="btn-edit-user" data-user-id="{{ user.id }}">Editează</span>
                     </div>
                     <div class="clickable icon-action"> 
                       <i class="fas fa-trash-alt"></i>
@@ -72,6 +72,7 @@
       {% include "modals/add-user-modal.html" %}
       {% include "modals/edit-user-modal.html" %}
       {% include "modals/delete-user-modal.html" %}
+
     </div>
 
       <div class="tab-pane fade" id="manage-footage">
