--- a/app/application/blueprints/site/views/modals/edit-user-modal.html
+++ b/app/application/blueprints/site/views/modals/edit-user-modal.html
@@ -1,16 +1,18 @@
 <div class="modal fade" id="edit-user-modal" tabindex="-1" role="dialog" aria-labelledby="editUserModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-header">
+        <div class="modal-header bg-primary text-white">
           <h5 class="modal-title" id="editUserModalLabel">Editare informații utilizator</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body">
-          <!-- Form fields for adding a new user -->
-          <form method="POST" action="/admin/edit-user">
+        
+        <form method="POST" action="/admin/edit-user">
+        <input type="hidden" name="user_id" id="edited-user-id" value="">
 
+        <div class="modal-body">
+            {{ form.hidden_tag() }}
             <div class="form-group">
               <label for="firstname">Nume</label>
               {{ form.firstname(class="form-control") }}
@@ -40,9 +42,23 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Închide</button>
-          <button type="submit" class="btn btn-primary" id="confirm-edit-btn">Salvează</button>
+          <button type="submit" class="btn btn-primary" id="confirm-delete-btn">Salvează</button>
         </div>
       </form>
       </div>
     </div>
-  </div>
+</div>
+
+<script>
+    $(document).ready(function() {
+      var userIdToEdit;
+    
+      $('.btn-edit-user').on('click', function() {
+        userIdToEdit = $(this).data('user-id');
+        $("#edited-user-id").val(userIdToEdit);
+
+
+        $('#edit-user-modal').modal('show');
+      });
+    })
+</script>
