--- a/app/application/blueprints/site/views/admin.html
+++ b/app/application/blueprints/site/views/admin.html
@@ -20,369 +20,11 @@
     </ul>
 
     <div class="tab-content mt-4">
-      <div class="tab-pane fade show active" id="manage-users">
-        <h3>Administrare utilizatori</h3>
-        <div class="table-responsive">
-          <table class="table table-bordered" id="users-table">
-            <thead>
-              <tr>
-                <th>Nume</th>
-                <th>Email</th>
-                <th>Număr de telefon</th>
-                <th>Acțiuni</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for user in users %}
-              
-              <tr>
-                <td>{{ user.firstname }} {{ user.secondname }}</td>
-                <td>{{ user.email }}</td>
-                <td>{{ user.phone }}</td>
-                <td>
-                  <div class="actions-list">
-                    <div class="clickable icon-action">
-                      <i class="fas fa-edit"></i>
-                      <span class="btn-edit-user" data-user-id="{{ user.id }}">Editează</span>
-                    </div>
-                    <div class="clickable icon-action"> 
-                      <i class="fas fa-trash-alt"></i>
-                      <span class="btn-delete-user" data-user-id="{{ user.id }}">Șterge</span>
-                    </div>
-                </div>
-                </td>
-              </tr>
-
-              {% endfor %}
-            </tbody>
-          </table>
-        </div>
-  
-        <button class="btn btn-success mt-2" data-toggle="modal" data-target="#add-user-modal">Adăugare utilizator nou</button>
-
-      {% if added_new_user %}
-      {% include "modals/added-user-info-modal.html" %}
-      {% endif %}
-
-      {% if edited_user %}
-      {% include "modals/edited-user-info-modal.html" %}
-      {% endif %}
-
-      {% if deleted_user %}
-      {% include "modals/deleted-user-info-modal.html" %}
-      {% endif %}
-
-      {% include "modals/add-user-modal.html" %}
-      {% include "modals/edit-user-modal.html" %}
-      {% include "modals/delete-user-modal.html" %}
-
-    </div>
-
-      <div class="tab-pane fade" id="manage-footage">
-        <h3>Administrare înregistrări</h3>
-        
-        <div class="table-responsive">
-          <table class="table table-bordered" id="footage-table">
-            <thead style="display: none;">
-              <tr>
-                <th>Footage</th>
-                <th>Actions</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td class="col-md-7">
-                  <div class="footage-info">
-                    <h4 class="footage-title">REG_CAMERA_DE_ZI_3</h4>
-                    <p class="footage-date">2023-05-01, 16:30</p>
-                  </div>
-                </td>
-                <td class="col-md-6">
-                  <div class="actions-list">
-                    <div class="clickable icon-action" onclick="openVideoModal('static/moment.mp4')">
-                      <i class="fas fa-eye"></i>
-                      <span>Vizionează</span>
-                    </div>
-                    <div class="clickable icon-action">
-                      <i class="fas fa-edit"></i>
-                      <span>Editează</span>
-                    </div>
-                    <div class="clickable icon-action"> 
-                      <i class="fas fa-trash-alt"></i>
-                      <span>Șterge</span>
-                    </div>
-                    <div class="clickable icon-action" onclick="downloadFootage('static/moment.mp4')">
-                      <i class="fas fa-download"></i>
-                      <span>Descarcă</span>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <td class="col-md-7">
-                  <div class="footage-info">
-                    <h4 class="footage-title">REG_GRADINA_21</h4>
-                    <p class="footage-date">2023-05-03, 19:30</p>
-                  </div>
-                </td>
-                <td class="col-md-6">
-                  <div class="actions-list">
-                    <div class="clickable icon-action" onclick="openVideoModal('static/moment.mp4')">
-                      <i class="fas fa-eye"></i>
-                      <span>Vizionează</span>
-                    </div>
-                    <div class="clickable icon-action">
-                      <i class="fas fa-edit"></i>
-                      <span>Editează</span>
-                    </div>
-                    <div class="clickable icon-action"> 
-                      <i class="fas fa-trash-alt"></i>
-                      <span>Șterge</span>
-                    </div>
-                    <div class="clickable icon-action" onclick="downloadFootage('static/moment.mp4')">
-                      <i class="fas fa-download"></i>
-                      <span>Descarcă</span>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <td class="col-md-7">
-                  <div class="footage-info">
-                    <h4 class="footage-title">REG_BAIE_1</h4>
-                    <p class="footage-date">2023-05-19, 11:22</p>
-                  </div>
-                </td>
-                <td class="col-md-6">
-                  <div class="actions-list">
-                    <div class="clickable icon-action" onclick="openVideoModal('static/moment.mp4')">
-                      <i class="fas fa-eye"></i>
-                      <span>Vizionează</span>
-                    </div>
-                    <div class="clickable icon-action">
-                      <i class="fas fa-edit"></i>
-                      <span>Editează</span>
-                    </div>
-                    <div class="clickable icon-action"> 
-                      <i class="fas fa-trash-alt"></i>
-                      <span>Șterge</span>
-                    </div>
-                    <div class="clickable icon-action" onclick="downloadFootage('static/moment.mp4')">
-                      <i class="fas fa-download"></i>
-                      <span>Descarcă</span>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      
-        <!-- Video player modal -->
-        <div class="modal fade" id="video-player-modal" tabindex="-1" role="dialog" aria-labelledby="videoPlayerModalLabel" aria-hidden="true">
-          <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="videoPlayerModalLabel">Vizualizare înregistrare cu potențial violent</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                <!-- Video player component -->
-                <video id="video-player" controls>
-                  Your browser does not support the video tag.
-                </video>
-              </div>
-            </div>
-          </div>
-        </div>
-     </div>
-
-      <div class="tab-pane fade" id="manage-surveillance-cameras">
-      <h3>Administrare camere de supraveghere</h3>
-        <div class="table-responsive">
-          <table class="table table-bordered" id="surveillance-camera-table">
-            <thead>
-              <tr>
-                <th>Denumire</th>
-                <th>Status</th>
-                <th>Descriere</th>
-                <th>Data inițierii</th>
-                <th>Up-time</th>
-                <th>Last update</th>
-                <th>Acțiuni</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>
-                  <i class="fas fa-video"></i>&nbsp;
-                  <b>CAMERA_DE_ZI_1</b>
-                </td>
-                <td>
-                  <span class="font-weight-bold text-success">
-                    ACTIVĂ
-                  </span>
-                </td>
-                <td>Funcționează în camera de zi.</td>
-                <td>2023-05-01, 16:22</td>
-                <td>18 ore</td>
-                <td>2023-05-01, 16:22</td>
-                <td class="col-md-1">
-                  <div class="actions-list">
-                    <div class="clickable icon-action text-success"> 
-                      <i class="fa fa-refresh"></i>
-                      <span>Actualizează</span>
-                    </div>
-                    <div class="clickable icon-action">
-                      <i class="fas fa-edit"></i>
-                      <span>Editează</span>
-                    </div>
-                    <div class="clickable icon-action"> 
-                      <i class="fas fa-trash-alt"></i>
-                      <span>Deconectează</span>
-                    </div>
-                </div>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <i class="fas fa-video"></i>&nbsp;
-                  <b>CAMERA_DE_ZI_2</b>
-                </td>
-                <td>
-                  <span class="font-weight-bold text-info">
-                    SE ACTUALIZEAZĂ
-                  </span>
-              </td>
-                <td>Funcționează în camera de zi.</td>
-                <td>2023-05-01, 16:22</td>
-                <td>18 ore</td>
-                <td>2023-05-01, 16:22</td>
-                <td class="col-md-1">
-                  <div class="actions-list">
-                    <div class="clickable icon-action text-success"> 
-                      <i class="fa fa-refresh"></i>
-                      <span>Actualizează</span>
-                    </div>
-                    <div class="clickable icon-action">
-                      <i class="fas fa-edit"></i>
-                      <span>Editează</span>
-                    </div>
-                    <div class="clickable icon-action"> 
-                      <i class="fas fa-trash-alt"></i>
-                      <span>Deconectează</span>
-                    </div>
-                </div>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <i class="fas fa-video"></i>&nbsp;
-                  <b>GRADINA_1</b>
-                </td>
-                <td>
-                  <span class="font-weight-bold text-danger">
-                    OPRITĂ
-                  </span>
-                </td>
-                <td>Funcționează în grădină.</td>
-                <td>2023-05-01, 16:22</td>
-                <td>18 ore</td>
-                <td>2023-05-01, 16:22</td>
-                <td class="col-md-1">
-                  <div class="actions-list">
-                    <div class="clickable icon-action text-success"> 
-                      <i class="fa fa-refresh"></i>
-                      <span>Actualizează</span>
-                    </div>
-                    <div class="clickable icon-action">
-                      <i class="fas fa-edit"></i>
-                      <span>Editează</span>
-                    </div>
-                    <div class="clickable icon-action"> 
-                      <i class="fas fa-trash-alt"></i>
-                      <span>Deconectează</span>
-                    </div>
-                </div>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <i class="fas fa-video"></i>&nbsp;
-                  <b>BUCATARIE_1</b>
-                </td>
-                <td>
-                  <span class="font-weight-bold text-success">ACTIVĂ</span>
-                </td>
-                <td>Funcționează în bucătărie.</td>
-                <td>2023-05-01, 16:22</td>
-                <td>18 ore</td>
-                <td>2023-05-01, 16:22</td>
-                <td class="col-md-1">
-                  <div class="actions-list">
-                    <div class="clickable icon-action text-success"> 
-                      <i class="fa fa-refresh"></i>
-                      <span>Actualizează</span>
-                    </div>
-                    <div class="clickable icon-action">
-                      <i class="fas fa-edit"></i>
-                      <span>Editează</span>
-                    </div>
-                    <div class="clickable icon-action"> 
-                      <i class="fas fa-trash-alt"></i>
-                      <span>Deconectează</span>
-                    </div>
-                </div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-  
-        <button class="btn btn-success mt-2" data-toggle="modal" data-target="#add-camera-modal">Adăugare cameră de supraveghere</button>
-  
-        <!-- Add new camera modal -->
-        <div class="modal fade" id="add-camera-modal" tabindex="-1" role="dialog" aria-labelledby="addCameraModalLabel" aria-hidden="true">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="addCameraModalLabel">Adăugare cameră de supraveghere</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                <!-- Form fields for adding a new user -->
-                <form>
-                  <div class="form-group">
-                    <label for="name">Nume</label>
-                    <input type="text" class="form-control" id="name" placeholder="Introduceți numele">
-                  </div>
-                  <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="Introduceți adresa de email">
-                  </div>
-                  <div class="form-group">
-                    <label for="phone">Număr de telefon</label>
-                    <input type="tel" class="form-control" id="phone" placeholder="Introduceți numărul de telefon">
-                  </div>
-                  <!-- Add more form fields as needed -->
-                </form>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Închide</button>
-                <button type="button" class="btn btn-primary">Salvează</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    
-    {% include "modals/video-player-modal.html" %}
-    
+      {% include "admin-tabs/manage-users.html" %}
+      {% include "admin-tabs/manage-footage.html" %}
+      {% include "admin-tabs/manage-surveillance-cameras.html" %}
   </div>
+  
 </div>
 
 {% include 'footer.html' %}
