--- a/app/application/blueprints/site/views/header.html
+++ b/app/application/blueprints/site/views/header.html
@@ -21,6 +21,8 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
+
+          {% if current_user.is_authenticated %}
           <ul class="navbar-nav ml-auto ms-auto">
             <li class="nav-item ">
               <a class="nav-link" href="/"><i class="fas fa-home me-2">&nbsp;</i>Panou principal</a>
@@ -35,9 +37,11 @@
               <a class="nav-link" href="/admin"><i class="fas fa-cogs me-2">&nbsp;</i>Administrare</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/login"><i class="fas fa-sign-out-alt me-2">&nbsp;</i>Delogare</a>
+              <a class="nav-link" href="/logout"><i class="fas fa-sign-out-alt me-2">&nbsp;</i>Delogare</a>
             </li>
           </ul>
+
+          {% endif %}
         </div>
       </div>
     </nav>
