Added Camera+Footage entites + new API Request
Added the followin 2 entities:

- Camera: defines a camera, its status, a name, a description, up-time, last time it was updated, path to
the footages and to the temporary footages that are held when receiving each 32 frames chunks from
the RaspberryPi.
- Footage: defines the footage with its name, a path, a date and the camera that provided it.

The API Request provides the user a footage based on footage name.

--- a/app/application/blueprints/site/views/admin-tabs/manage-footage.html
+++ b/app/application/blueprints/site/views/admin-tabs/manage-footage.html
@@ -75,7 +75,7 @@
             </td>
             <td class="col-md-6">
               <div class="actions-list">
-                <div class="clickable icon-action" onclick="openVideoModal('static/moment.mp4')">
+                <div class="clickable icon-action" onclick="openVideoModal('/api/get/footage/moment.mp4')">
                   <i class="fas fa-eye"></i>
                   <span>Vizionează</span>
                 </div>
