Finished footage managing
Deleted the 'Edit' action as it doesn't really make much sense in that context.
The admin user is able to either view or delete the footage.
A regular user will only be able to view it.

--- a/app/application/blueprints/site/views/admin.html
+++ b/app/application/blueprints/site/views/admin.html
@@ -100,3 +100,15 @@
     $('#video-player-modal').modal('show');
   }
 </script>
+
+<script>
+  $(document).ready(function() {
+    if (window.location.hash) {
+      var targetSection = window.location.hash;
+      $('a[href="' + targetSection + '"]').tab('show');
+      $('html, body').animate({
+        scrollTop: $(targetSection).offset().top
+      }, 1000);
+    }
+  });
+</script>
