--- a/app/application/blueprints/site/views/modals/add-user-modal.html
+++ b/app/application/blueprints/site/views/modals/add-user-modal.html
@@ -8,7 +8,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <form method="POST" action="/admin/add-user">
+          <form method="POST" action="/admin/user/add">
             {{ form.hidden_tag() }}
             <div class="form-group">
               <label for="firstname">Nume</label>
