--- a/app/application/blueprints/site/views/modals/delete-user-modal.html
+++ b/app/application/blueprints/site/views/modals/delete-user-modal.html
@@ -8,7 +8,7 @@
           </button>
         </div>
         
-        <form method="POST" action="/admin/delete-user">
+        <form method="POST" action="/admin/user/delete">
         <input type="hidden" name="user_id" id="deleted-user-id" value="">
 
         <div class="modal-body">
