--- a/app/application/blueprints/site/views/admin-tabs/manage-footage.html
+++ b/app/application/blueprints/site/views/admin-tabs/manage-footage.html
@@ -10,93 +10,41 @@
           </tr>
         </thead>
         <tbody>
+
+          {% for footage in footages %}
           <tr>
-            <td class="col-md-7">
+            <td class="col-md-8">
               <div class="footage-info">
-                <h4 class="footage-title">REG_CAMERA_DE_ZI_3</h4>
-                <p class="footage-date">2023-05-01, 16:30</p>
+                <h4 class="footage-title">{{ footage.name }}</h4>
+                <p class="footage-date">{{ footage.date }}</p>
               </div>
             </td>
-            <td class="col-md-6">
+            <td class="col-md-5">
               <div class="actions-list">
-                <div class="clickable icon-action" onclick="openVideoModal('static/moment.mp4')">
+                <div class="clickable icon-action" onclick="openVideoModal('/api/get/footage/{{ footage.camera.footages_path }}/{{ footage.path }}')">
                   <i class="fas fa-eye"></i>
                   <span>Vizionează</span>
                 </div>
-                <div class="clickable icon-action">
-                  <i class="fas fa-edit"></i>
-                  <span>Editează</span>
+                <div class="clickable icon-action" onclick="downloadFootage('/api/get/footage/{{ footage.camera.footages_path }}/{{ footage.path }}')">
+                  <i class="fas fa-download"></i>
+                  <span>Descarcă</span>
                 </div>
                 <div class="clickable icon-action"> 
                   <i class="fas fa-trash-alt"></i>
-                  <span>Șterge</span>
-                </div>
-                <div class="clickable icon-action" onclick="downloadFootage('static/moment.mp4')">
-                  <i class="fas fa-download"></i>
-                  <span>Descarcă</span>
+                  <span class="btn-delete-footage" data-footage-id="{{ footage.id }}">Șterge</span>
                 </div>
               </div>
             </td>
           </tr>
-          <tr>
-            <td class="col-md-7">
-              <div class="footage-info">
-                <h4 class="footage-title">REG_GRADINA_21</h4>
-                <p class="footage-date">2023-05-03, 19:30</p>
-              </div>
-            </td>
-            <td class="col-md-6">
-              <div class="actions-list">
-                <div class="clickable icon-action" onclick="openVideoModal('static/moment.mp4')">
-                  <i class="fas fa-eye"></i>
-                  <span>Vizionează</span>
-                </div>
-                <div class="clickable icon-action">
-                  <i class="fas fa-edit"></i>
-                  <span>Editează</span>
-                </div>
-                <div class="clickable icon-action"> 
-                  <i class="fas fa-trash-alt"></i>
-                  <span>Șterge</span>
-                </div>
-                <div class="clickable icon-action" onclick="downloadFootage('static/moment.mp4')">
-                  <i class="fas fa-download"></i>
-                  <span>Descarcă</span>
-                </div>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td class="col-md-7">
-              <div class="footage-info">
-                <h4 class="footage-title">REG_BAIE_1</h4>
-                <p class="footage-date">2023-05-19, 11:22</p>
-              </div>
-            </td>
-            <td class="col-md-6">
-              <div class="actions-list">
-                <div class="clickable icon-action" onclick="openVideoModal('/api/get/footage/blabla/moment.mp4')">
-                  <i class="fas fa-eye"></i>
-                  <span>Vizionează</span>
-                </div>
-                <div class="clickable icon-action">
-                  <i class="fas fa-edit"></i>
-                  <span>Editează</span>
-                </div>
-                <div class="clickable icon-action"> 
-                  <i class="fas fa-trash-alt"></i>
-                  <span>Șterge</span>
-                </div>
-                <div class="clickable icon-action" onclick="downloadFootage('static/moment.mp4')">
-                  <i class="fas fa-download"></i>
-                  <span>Descarcă</span>
-                </div>
-              </div>
-            </td>
-          </tr>
+          {% endfor %}
         </tbody>
       </table>
     </div>
 
+    {% if deleted_footage %}
+    {% include "modals/deleted-footage-info-modal.html" %}
+    {% endif %}
+
+    {% include "modals/delete-footage-modal.html" %}
     {% include "modals/video-player-modal.html" %}
 </div>
