--- a/app/application/blueprints/site/views/history.html
+++ b/app/application/blueprints/site/views/history.html
@@ -1,26 +1,76 @@
 {% include 'header.html' %}
 
-<div class="container mt-5">
-    <div class="row">
-      Istoric înregistrări
-    </div>
-    <div class="row">
-        Istoric înregistrări
-      </div>
-      <div class="row">
-        Istoric înregistrări
-      </div>
-  </div>
-  <div class="container mt-5">
-    <div class="row">
-      Istoric înregistrări
-    </div>
-    <div class="row">
-        Istoric înregistrări
-      </div>
-      <div class="row">
-        Istoric înregistrări
-      </div>
+<div class="container mt-4">
+  <h3>Istoric înregistrări</h3>
+
+  <div class="table-responsive">
+    <table class="table table-bordered" id="footage-table">
+      <thead style="display: none;">
+        <tr>
+          <th>Footage</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for footage in footages %}
+        <tr>
+          <td class="col-md-9">
+            <div class="footage-info">
+              <h4 class="footage-title">{{ footage.name }}</h4>
+              <p class="footage-date">{{ footage.date }}</p>
+            </div>
+          </td>
+          <td class="col-md-4">
+            <div class="actions-list">
+              <div class="clickable icon-action" onclick="openVideoModal('/api/get/footage/{{ footage.camera.footages_path }}/{{ footage.path }}')">
+                <i class="fas fa-eye"></i>
+                <span>Vizionează</span>
+              </div>
+              <div class="clickable icon-action" onclick="downloadFootage('/api/get/footage/{{ footage.camera.footages_path }}/{{ footage.path }}')">
+                <i class="fas fa-download"></i>
+                <span>Descarcă</span>
+              </div>
+            </div>
+          </td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
   </div>
 
+  {% if deleted_footage %}
+  {% include "modals/deleted-footage-info-modal.html" %}
+  {% endif %}
+
+  {% include "modals/delete-footage-modal.html" %}
+  {% include "modals/video-player-modal.html" %}
+</div>
+
 {% include 'footer.html' %}
+
+
+<script src="static/utils.js"></script>
+
+<script>
+  $(document).ready(function() {
+    $('#users-table').DataTable({
+      paging: true,
+      lengthChange: false,
+      pagingType: 'simple',
+      pageLength: 10,
+      language: {
+        url: 'static/datatables/RO_RO.lang'
+      },
+    });
+
+    var footageTable = $('#footage-table').DataTable({
+      paging: true,
+      lengthChange: false,
+      pagingType: 'simple',
+      pageLength: 10,
+      language: {
+        url: 'static/datatables/RO_RO.lang'
+      }
+    });
+  })
+</script>
