--- a/app/application/blueprints/site/views/admin-tabs/manage-footage.html
+++ b/app/application/blueprints/site/views/admin-tabs/manage-footage.html
@@ -21,9 +21,9 @@
             </td>
             <td class="col-md-5">
               <div class="actions-list">
-                <div class="clickable icon-action" onclick="openVideoModal('/api/get/footage/{{ footage.camera.footages_path }}/{{ footage.path }}')">
+                <div class="clickable icon-action" onclick="setVideoSource('/api/get/footage/{{ footage.camera.footages_path }}/{{ footage.path }}')">
                   <i class="fas fa-eye"></i>
-                  <span>Vizionează</span>
+                  <span class="btn-view-footage" data-footage-id="{{ footage.id }}">Vizionează</span>
                 </div>
                 <div class="clickable icon-action" onclick="downloadFootage('/api/get/footage/{{ footage.camera.footages_path }}/{{ footage.path }}')">
                   <i class="fas fa-download"></i>
