--- a/app/application/blueprints/site/views/modals/video-player-modal.html
+++ b/app/application/blueprints/site/views/modals/video-player-modal.html
@@ -1,19 +1,54 @@
-        <!-- Video player modal -->
-        <div class="modal fade" id="video-player-modal" tabindex="-1" role="dialog" aria-labelledby="videoPlayerModalLabel" aria-hidden="true">
-          <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="videoPlayerModalLabel">Vizualizare înregistrare cu potențial violent</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                <!-- Video player component -->
-                <video id="video-player" controls>
-                  Your browser does not support the video tag.
-                </video>
-              </div>
-            </div>
-          </div>
+<!-- Video player modal -->
+<div class="modal fade" id="video-player-modal" tabindex="-1" role="dialog" aria-labelledby="videoPlayerModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="videoPlayerModalLabel">
+          <i class="fas fa-eye mr-2"></i>
+          Vizualizare înregistrare
+        </h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="video-player-container">
+          <video id="video-player" controls></video>
         </div>
+        <div class="footage-info">
+          <h6 id="viewed-footage-name" class="mt-3"></h6>
+          <p id="viewed-footage-date"></p>
+        </div>
+      </div>
+      <div class="modal-footer justify-content-end">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Închide</button>
+      </div>
+    </div>
+  </div>
+</div>
+  <script>
+    $(document).ready(function() {
+      var footageIdToEdit;
+    
+      $('.btn-view-footage').on('click', function() {
+        footageIdToEdit = $(this).data('footage-id');
+    
+        $.ajax({
+          url: `/api/get/info/footage/${footageIdToEdit}`,
+          method: 'GET',
+          dataType: 'json',
+          success: function(response) {
+            footage_id = response.Data.Footage['name']
+            footage_name = response.Data.Footage['name']
+            footage_date = response.Data.Footage['date']
+            footage_path = response.Data.Footage['path']
+
+            $('#viewed-footage-name').text(footage_name)
+            $('#viewed-footage-date').text(footage_date)
+            $('#video-player-modal').modal('show');
+          }
+        })
+
+      });
+    })
+</script>
