Finished manage footage

--- a/app/application/blueprints/site/views/history.html
+++ b/app/application/blueprints/site/views/history.html
@@ -2,7 +2,7 @@
 
 <div class="container mt-4">
   <h3>Istoric înregistrări</h3>
-  <p>Această secțiune prezintă o listă de înregistrări anterioare, disponibile pentru vizualizare și descărcare.</p>
+  <p>Această secțiune prezintă o listă de înregistrări anterioare cu potențial de violență ridicat, disponibile pentru vizualizare și descărcare.</p>
 
   <div class="table-responsive">
     <table class="table table-bordered" id="footage-table">
