Divided the admin page in more sub-pages
- added the /manage-footage and /manage-surveillance-cameras endpoints and divided the admin page
in separate sub-pages instead of sections.
- created the SSE (Server Sent Events) directory for storting event handlers for each html page
and/or action.
- created separate requests for the new endpoints.

--- a/app/application/blueprints/site/views/admin-tabs/manage-footage-tab.html
+++ b/app/application/blueprints/site/views/admin-tabs/manage-footage-tab.html
@@ -1,4 +1,4 @@
-<div class="tab-pane fade" id="manage-footage">
+<div class="container" id="manage-footage">
     <h3>Administrare înregistrări</h3>
     
     <div class="table-responsive">
