--- a/app/application/blueprints/site/views/admin-tabs/manage-surveillance-cameras-tab.html
+++ b/app/application/blueprints/site/views/admin-tabs/manage-surveillance-cameras-tab.html
@@ -1,4 +1,4 @@
-<div class="tab-pane fade" id="manage-surveillance-cameras">
+<div class="container" id="manage-surveillance-cameras">
   <h3>Administrare camere de supraveghere</h3>
   <div class="table-responsive">
     <table class="table table-bordered" id="surveillance-camera-table">
