--- a/app/application/blueprints/site/views/admin-tabs/manage-users-tab.html
+++ b/app/application/blueprints/site/views/admin-tabs/manage-users-tab.html
@@ -1,4 +1,4 @@
-<div class="tab-pane fade show active" id="manage-users">
+<div class="container show active" id="manage-users">
     <h3>Administrare utilizatori</h3>
     <div class="table-responsive">
       <table class="table table-bordered" id="users-table">
