The user is now able to change his/her password.

--- a/app/application/blueprints/site/views/change-password.html
+++ b/app/application/blueprints/site/views/change-password.html
@@ -11,13 +11,13 @@
             <a class="nav-link" href="/profile">Informatii personale</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="/profile/change-password">Schimbă parolă</a>
+            <a class="nav-link active" href="/profile/change-password">Schimbă parola</a>
           </li>
         </ul>
       </div>
     </div>
     <div class="col-lg-9">
-      <div class="tab-content">
+      <div class="ml-5 tab-content">
         <div class="tab-pane fade show active">
           {% include "profile-tabs/change-password-tab.html" %}
         </div>
