--- a/app/application/blueprints/site/views/profile-tabs/change-password-tab.html
+++ b/app/application/blueprints/site/views/profile-tabs/change-password-tab.html
@@ -1,14 +1,8 @@
 <div class="container mt-4" id="change-password">
   <div class="row">
-    <div class="col-lg-6">
+    <div class="col-lg-10">
       <h4 class="text-left mb-4">Schimbă parolă</h4>
-      {% if error %}
-      <div class="alert alert-danger">{{ error }}</div>
-      {% endif %}
-      {% if success %}
-      <div class="alert alert-success">{{ success }}</div>
-      {% endif %}
-      <form method="POST" action="#" style="border: 1px solid #ccc; padding: 20px; border-radius: 5px;">
+      <form method="POST" action="" style="border: 1px solid #ccc; padding: 20px; border-radius: 5px;">
         {{ form.hidden_tag() }}
         <div class="form-group">
           <label for="{{ form.old_password.id }}">Parolă veche</label>
@@ -19,7 +13,7 @@
           {{ form.new_password(class="form-control") }}
         </div>
         <div class="form-group">
-          <label for="{{ form.repeat_password.id }}">Repetă parola nouă</label>
+          <label for="{{ form.repeat_password.id }}">Rescrieți parola nouă</label>
           {{ form.repeat_password(class="form-control") }}
         </div>
         <div class="text-left">
@@ -28,4 +22,24 @@
       </form>
     </div>
   </div>
+  
+  {% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+    {% for category, message in messages %}
+      {% if category == 'error' %}
+        <div class="text-left">
+          <div class="mt-4 alert alert-danger" role="alert">
+            {{ message }}
+          </div>
+        </div>
+      {% else %}
+        <div class="text-left">
+          <div class="mt-4 alert alert-success" role="alert">
+            {{ message }}
+          </div>
+        </div>
+      {% endif %}
+    {% endfor %}
+  {% endif %}
+{% endwith %}
 </div>
