--- a/app/application/blueprints/site/views/admin-tabs/manage-surveillance-cameras-tab.html
+++ b/app/application/blueprints/site/views/admin-tabs/manage-surveillance-cameras-tab.html
@@ -26,9 +26,19 @@
             <b>{{ camera.name }}</b>
           </td>
           <td>
-            <span class="font-weight-bold {{ 'text-success' if camera.status.id == 1 else 'text-danger' }}">
+            {% if camera.status.id == 0 %}
+            <span class="font-weight-bold text-danger">
               {{ camera.status.name }}
             </span>
+            {% elif camera.status.id == 1 %}
+            <span class="font-weight-bold text-success">
+              {{ camera.status.name }}
+            </span>
+            {% else %}
+            <span class="font-weight-bold text-info">
+              {{ camera.status.name }}
+            </span>
+            {% endif %}
           </td>
           <td class="col-md-2">{{ camera.description }}</td>
           <td>{{ camera.last_restart }}</td>
@@ -61,6 +71,10 @@
 
       {% if deleted_camera %}
       {% include "modals/deleted-camera-info-modal.html" %}
+      {% endif %}
+
+      {% if updated_camera %}
+      {% include "modals/updated-camera-info-modal.html" %}
       {% endif %}
 
       {% include "modals/edit-camera-modal.html" %}
