Over-the-air update
- created get request with JWT Token verification
- camera will access this request after the update in order to announce the system that it finished
- auto-refreshing the manage-surveillance-cameras page after an update
- blocking any other action in regards to the updating camera and setting the corresponding updating status
while it is updating

--- a/app/application/controllers/static/css/style.css
+++ b/app/application/controllers/static/css/style.css
@@ -113,3 +113,8 @@ body {
     color: #ffffff;
     background-color: #000000;
   }
+
+  .disabled-div {
+    pointer-events: none;
+    opacity: 0.6;
+  }
