--- a/app/application/blueprints/site/views/admin-tabs/manage-surveillance-cameras-tab.html
+++ b/app/application/blueprints/site/views/admin-tabs/manage-surveillance-cameras-tab.html
@@ -17,9 +17,11 @@
         {% for camera in cameras %}
         <tr>
           <td style="width: 5%;">
+            <div class="{{ 'disabled-div' if camera.status.id == 2 else '' }}"">
             <button class="btn btn-link btn-sm btn-toggle-camera power-btn" data-camera-id="{{ camera.id }}">
               <i class="fas fa-power-off fa-lg"></i>
             </button>
+          </div>
           </td>
           <td class="col-md-2">
             <i class="fas fa-video"></i>&nbsp;
@@ -45,15 +47,15 @@
           <td>{{ camera.last_update }}</td>
           <td class="col-md-1">
             <div class="actions-list">
-              <div class="clickable icon-action text-info">
+              <div class="clickable icon-action text-info {{ 'disabled-div' if camera.status.id == 2 else '' }}">
                 <i class="fa fa-refresh"></i>
                 <span class="btn-update-camera" data-camera-id="{{ camera.id }}">Actualizează</span>
               </div>
-              <div class="clickable icon-action">
+              <div class="clickable icon-action {{ 'disabled-div' if camera.status.id == 2 else '' }}">
                 <i class="fas fa-edit"></i>
                 <span class="btn-edit-camera" data-camera-id="{{ camera.id }}">Editează</span>
               </div>
-              <div class="clickable icon-action">
+              <div class="clickable icon-action {{ 'disabled-div' if camera.status.id == 2 else '' }}">
                 <i class="fas fa-trash-alt"></i>
                 <span class="btn-delete-camera" data-camera-id="{{ camera.id }}">Înlăturare</span>
               </div>
